CRM-532 => fixing composer alignment issue when composer is disabled

--- a/src/app/widget/widget.component.scss
+++ b/src/app/widget/widget.component.scss
@@ -1544,6 +1544,11 @@ button.close-widget-wrapper {
   }
 }
 
+.widget-chat-composer.composer-disabled {
+  padding: 0px 38px 16px 40px !important;
+}
+
+
 .error-icon {
   text-align: center;
   display: grid;
